--- a/custom_components/ble_adjustable_bed/manifest.json
+++ b/custom_components/ble_adjustable_bed/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "ble_adjustable_bed",
   "name": "BLE Adjustable Bed",
-  "version": "0.1.1",
+  "version": "0.2.5",
   "documentation": "https://github.com/cscherpenisse/ha-ble-adjustable-bed",
-  "requirements": [],
+  "requirements": ["bleak>=0.21.1"],
   "dependencies": ["bluetooth"],
   "codeowners": ["@cscherpenisse"],
-  "config_flow": true,
-  "iot_class": "local_push"
+  "iot_class": "local_polling",
+  "platforms": ["button", "cover", "number"],
+  "config_flow": true
 }
