--- a/custom_components/ble_adjustable_bed/manifest.json
+++ b/custom_components/ble_adjustable_bed/manifest.json
@@ -7,6 +7,6 @@
   "dependencies": ["bluetooth"],
   "codeowners": ["@cscherpenisse"],
   "iot_class": "local_polling",
-  "platforms": ["button", "cover", "number"],
+  "platforms": ["button", "cover", "number", "sensor"],
   "config_flow": true
 }
